@@ -1,5 +1,8 @@
 Revision history for Module-Starter-Plugin-CGIApp
 
+UNRELEASED
+        Instead of pgp.mit.edu, t/00-signature.t in generated dists will now
+        use pool.sks-keyservers.net for key queries.
 
 0.30    Sat Mar  6 22:54:25 EST 2010
         cgiapp-starter and titanium-starter had got broken during the last
